--- a/src/pages/reactor-list/reactor-list.html
+++ b/src/pages/reactor-list/reactor-list.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="outer-content speaker-list">
+<ion-content class="outer-content reactor-list">
   <ion-card *ngFor="let speaker of speakers" class="speaker-card">
 
     <ion-card-header>
