--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
+  <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+
   <script src="cordova.js"></script>
 
   <!-- The polyfills js is generated during the build process -->
