--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -8,16 +8,15 @@
 </ion-header>
 
 <ion-content class="outer-content">
-  <div padding-top text-center *ngIf="username">
+  <div padding-top text-center *ngIf="user">
     <img src="http://www.gravatar.com/avatar?d=mm&s=140" alt="avatar">
-    <h2>{{username}}</h2>
-
+    <h2>Name: {{user.displayName || "You didn't set up your name yet"}}</h2>
     <ion-list inset>
       <button ion-item (click)="updatePicture()">Update Picture</button>
       <button ion-item (click)="changeUsername()">Change Username</button>
       <button ion-item (click)="changePassword()">Change Password</button>
       <button ion-item (click)="support()">Support</button>
-      <button ion-item (click)="logout()">Logout</button>
+      <button ion-item (click)="logoutUser()">Logout</button>
     </ion-list>
   </div>
 </ion-content>
