user can modify his name

--- a/src/pages/reset-password/reset-password.html
+++ b/src/pages/reset-password/reset-password.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-    <form [formGroup]="resetPasswordForm" (submit)="resetPasword()" novalidate>
+    <form [formGroup]="resetPasswordForm" (submit)="resetPassword()" novalidate>
         <ion-item>
             <ion-label stacked>Email</ion-label>
             <ion-input #email formControlName="email" type="email" placeholder="Your email address"
