--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,9 @@
 <ion-header>
-  <ion-navbar color="primary">
-    <ion-title>
-      Login
-    </ion-title>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
 
