--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,7 +1,10 @@
 <ion-header>
-	<ion-navbar color="primary">
-		<ion-title>Create an Account</ion-title>
-	</ion-navbar>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Create an Account</ion-title>
+  </ion-navbar>
 </ion-header>
 
 <ion-content padding>
