--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs [selectedIndex]="mySelectedIndex">
-  <ion-tab [root]="tab1Root" tabTitle="Events" tabIcon="calendar"></ion-tab>
+  <!--<ion-tab [root]="tab1Root" tabTitle="Events" tabIcon="calendar"></ion-tab>-->
+  <ion-tab [root]="tab1Root" tabTitle="Projects" tabIcon="filing"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Reactors" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Projects" tabIcon="filing"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Map" tabIcon="map"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
