--- a/src/pages/project-list/project-list.html
+++ b/src/pages/project-list/project-list.html
@@ -31,8 +31,7 @@
 </ion-header>
 
 <ion-content class="outer-content project-list">
-  <ion-list [hidden]="shownProjects === 0"> 
-  <ion-card #cardProject *ngFor="let project of projects" class="speaker-card" [hidden]="project.hide">
+  <ion-card #cardProject *ngFor="let project of projects | async" class="speaker-card" [hidden]="project.hide">
     <ion-card-header>
       <button ion-item detail-none (click)="goToProjectDetail(project)">
         <ion-thumbnail item-left>
@@ -82,23 +81,13 @@
     </ion-row>
 
   </ion-card>
-  </ion-list>
-  <ion-list-header [hidden]="shownProjects > 0">
-    No Sessions Found
+  <!--</ion-list>-->
+  <!--<ion-list-header [hidden]="shownProjects > 0">-->
+  <ion-list-header [hidden]= {{ (projects | async)?.length > 0 }}>
+    <p>{{(projects|async)?.length}}</p>
+    <p>No Projects Found</p>
   </ion-list-header>
 
 </ion-content>
 
-
-
-
-
-<!--<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Projects</ion-title>
-  </ion-navbar>
-</ion-header>-->
 
