project list modif

--- a/src/pages/project-list/project-list.html
+++ b/src/pages/project-list/project-list.html
@@ -83,10 +83,10 @@
   </ion-card>
   <!--</ion-list>-->
   <!--<ion-list-header [hidden]="shownProjects > 0">-->
-  <ion-list-header [hidden]= {{ (projects | async)?.length > 0 }}>
+  <!--<ion-list-header [hidden]= {{ (projects | async)?.length > 0 }}>
     <p>{{(projects|async)?.length}}</p>
     <p>No Projects Found</p>
-  </ion-list-header>
+  </ion-list-header>-->
 
 </ion-content>
 
