--- a/src/pages/project-list/project-list.html
+++ b/src/pages/project-list/project-list.html
@@ -4,8 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
 
-    <ion-segment [(ngModel)]="segment" (ionChange)="updateProject()">
-    <!--<ion-segment [(ngModel)]="segment">-->
+    <ion-segment [(ngModel)]="segment" (ionChange)="updateProject(segment)">
       <ion-segment-button value="all">
         All - Projects
       </ion-segment-button>
@@ -31,7 +30,7 @@
 </ion-header>
 
 <ion-content class="outer-content project-list">
-  <ion-card #cardProject *ngFor="let project of projects | async" class="speaker-card" [hidden]="project.hide">
+  <ion-card #cardProject *ngFor="let project of projects | async" class="speaker-card">
     <ion-card-header>
       <button ion-item detail-none (click)="goToProjectDetail(project)">
         <ion-thumbnail item-left>
@@ -57,7 +56,7 @@
 
     <ion-row no-padding>
       <ion-col text-left>
-        <button ion-button clear small color="primary" icon-left (click)="addFavorite(cardProject, project)" *ngIf="segment === 'all'">
+        <button ion-button clear small color="primary" icon-left (click)="createFavorite(project)" *ngIf="segment === 'all'">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
